# OneLineADay

./: .dockerfile  .gitignore  CHANGELOG.md  README.md  db.sql  dev.dhall  live-lines.cabal  one-by-one.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Config.hs  DB.hs  Env.hs
src/Auth/: Api.hs  Crypto.hs
src/Lines/: Api.hs  Model.hs  Store.hs
src/LiveLines/: Api.hs  App.hs  Context.hs
src/Server/: Api.hs  App.hs  Context.hs
src/User/: Model.hs  Store.hs
web/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js  webpack.config.ts
web/public/: global.css  index.html
web/scripts/: setupTypeScript.js
web/src/: Api.ts  App.svelte  Auth.ts  Login.svelte  Nav.svelte  api.js  main.ts
web/src/routes/: Home.svelte  Login.svelte
web/src/services/: lines.ts
