cabal-version:      3.4
name:               live-lines
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             James Potter
maintainer:         jamesrpotter1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        User.Store
        User.Model
        Auth.Api
        Auth.Crypto
        Server.App
        Server.Api
        Server.Context
        Lines.Api
        Lines.Model
        Lines.Store
        Env
        DB
        Config

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    ghc-options:      -Wall
    default-extensions: OverloadedStrings
                      , LambdaCase
                      , InstanceSigs
                      , EmptyCase
                      , FlexibleContexts
                      , FlexibleInstances
                      , MultiParamTypeClasses
                      , MultiWayIf
                      , NamedFieldPuns
                      , TupleSections
                      , RecordWildCards
    build-depends:
        base ^>=4.14.3.0
        , aeson
        , dhall
        , mtl
        , postgresql-simple
        , safe-exceptions
        , say
        , servant
        , servant-server
        , servant-auth
        , servant-auth-server
        , text
        , uuid
        , warp
        , cryptonite
        , wai-cors
        , wai-logger
        , bytestring
        , cookie
        , time
        , datetime
    default-language: Haskell2010

executable live-lines
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
        , aeson
        , dhall
        , mtl
        , postgresql-simple
        , safe-exceptions
        , say
        , servant
        , servant-server
        , servant-auth
        , servant-auth-server
        , text
        , uuid
        , warp
        , cryptonite
        , bytestring
        , wai-cors
        , wai-logger
        , live-lines
        , cookie
        , time
        , datetime
